--- a/estore-api/src/main/resources/application.properties
+++ b/estore-api/src/main/resources/application.properties
@@ -1,3 +1,9 @@
-server.error.include-message=always
-courses.file=data/courses.json
-users.file = data/users.json
+spring.config.import=env.properties
+spring.data.mongodb.uri=mongodb+srv://Shadedog838:${DB_PASSWORD}@coursework.gghpo.mongodb.net/coursework_db?retryWrites=true&w=majority
+spring.data.mongodb.database=coursework_db
+spring.data.mongodb.port=27017
+
+# spring.data.mongodb.port=27017
+# spring.data.mongodb.database=coursework_db
+# spring.data.mongodb.username=${DB_USER}
+# spring.data.mongodb.password=${DB_PASSWORD}
