--- a/estore-ui/angular.json
+++ b/estore-ui/angular.json
@@ -34,21 +34,24 @@
                     },
                     "configurations": {
                         "production": {
-                            "budgets": [{
+                            "budgets": [
+                                {
                                     "type": "initial",
                                     "maximumWarning": "500kb",
                                     "maximumError": "1mb"
                                 },
                                 {
                                     "type": "anyComponentStyle",
-                                    "maximumWarning": "2kb",
-                                    "maximumError": "4kb"
+                                    "maximumWarning": "150kb",
+                                    "maximumError": "150kb"
                                 }
                             ],
-                            "fileReplacements": [{
-                                "replace": "src/environments/environment.ts",
-                                "with": "src/environments/environment.prod.ts"
-                            }],
+                            "fileReplacements": [
+                                {
+                                    "replace": "src/environments/environment.ts",
+                                    "with": "src/environments/environment.prod.ts"
+                                }
+                            ],
                             "outputHashing": "all"
                         },
                         "development": {
@@ -103,6 +106,6 @@
     },
     "defaultProject": "estore-ui",
     "cli": {
-      "analytics": "056f333e-c1b9-435a-b957-44026cd58ea4"
+        "analytics": "056f333e-c1b9-435a-b957-44026cd58ea4"
     }
 }
