--- a/estore-ui/package.json
+++ b/estore-ui/package.json
@@ -3,14 +3,23 @@
   "version": "0.0.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --open",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
-    "test": "ng test"
+    "heroku-postbuild": "ng build && npm install -g http-server-spa",
+    "test": "ng test",
+    "lint": "ng lint",
+    "e2e": "ng e2e",
+    "start": "http-server-spa dist/estore-ui index.html $PORT"
+  },
+  "engines": {
+    "node": "14.18.1",
+    "npm": "6.14.15"
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "^14.0.6",
+    "@angular/compiler-cli": "^13.2.7",
     "@angular/animations": "~13.2.0",
+    "@angular-devkit/build-angular": "^13.2.6",
+    "typescript": "~4.5.2",
     "@angular/cdk": "^13.3.0",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
@@ -25,11 +34,12 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.2",
-    "@angular/cli": "~13.2.2",
-    "@angular/compiler-cli": "~13.2.0",
+    "@angular-devkit/build-angular": "^13.2.6",
+    "@angular/cli": "^14.0.6",
+    "@angular/compiler-cli": "^13.2.7",
     "@types/jasmine": "~3.10.0",
     "@types/node": "^12.11.1",
+    "enhanced-resolve": "^3.3.0",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
     "karma-chrome-launcher": "~3.1.0",
