--- a/estore-api/pom.xml
+++ b/estore-api/pom.xml
@@ -37,9 +37,15 @@
 		<dependency>
   		<groupId>org.springframework.boot</groupId>
   		<artifactId>spring-boot-starter-validation</artifactId>
-	</dependency>
+		</dependency>
+
+		  <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.22</version>
+      </dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
