--- a/estore-ui/package.json
+++ b/estore-ui/package.json
@@ -15,22 +15,23 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/cli": "^14.0.6",
-    "@angular/compiler-cli": "^13.2.7",
-    "@angular/animations": "~13.2.0",
     "@angular-devkit/build-angular": "^13.2.6",
-    "typescript": "~4.5.2",
+    "@angular/animations": "^13.2.7",
     "@angular/cdk": "^13.3.0",
+    "@angular/cli": "^14.0.6",
     "@angular/common": "~13.2.0",
     "@angular/compiler": "~13.2.0",
+    "@angular/compiler-cli": "^13.2.7",
     "@angular/core": "~13.2.0",
     "@angular/forms": "~13.2.0",
     "@angular/material": "^13.3.1",
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typescript": "~4.5.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
